git push <remote> --all

--- a/index.html
+++ b/index.html
@@ -8,21 +8,37 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Buffi Tech Startup</title>
+    <title>WanderApp</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/full-slider.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
 
   </head>
 
   <body>
 
-    <header>
-      
-    </header>
+    
+    <div class="bg">
+      <div id="overlay">
+        <div class="jumbotron">
+          <div class="row">
+
+            <div class="col-md-6 col-sm-6">
+              <img id="phone" src="images/phone.png">
+            </div>
+
+            <div class="col-md-6 col-sm-6">
+              <h2>Wander App</h2>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
 
 
     <!-- Footer -->
